# workpiece_placement

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  calib.cpp  main.cpp
sample_gcode/: output.ngc  prova-002.gcode  prova-003.gcode  prova.gcode  prova1.gcode  provaFine.gcode  provaFine1.gcode  provaP.gcode
test/: BiggestContourFinder_test.cpp  CMakeLists.txt  ContourDetector_test.cpp  GcodePointUpdater_test.cpp  GcodeUpdater_test.cpp  ImageCutter_test.cpp  ImageLoader_test.cpp  Image_test.cpp  PerspectiveCorrector_test.cpp  PixelsToMetric_test.cpp  WorkPieceExtractor_test.cpp  WorkPiece_test.cpp  WorkingAreaExtractor_test.cpp  WorkingArea_test.cpp  test_config.h  test_config.h.in
wplib/: BiggestContourFinder.cpp  BiggestContourFinder.h  CMakeLists.txt  CameraCalibrator.cpp  CameraCalibrator.h  CameraCapture.cpp  CameraCapture.h  ContourDetector.cpp  ContourDetector.h  GcodePointUpdater.cpp  GcodePointUpdater.h  GcodeUpdater.cpp  GcodeUpdater.h  Image.cpp  Image.h  ImageCorrector.cpp  ImageCorrector.h  ImageCutter.cpp  ImageCutter.h  ImageLoader.cpp  ImageLoader.h  PerspectiveCorrector.cpp  PerspectiveCorrector.h  PixelsToMetric.cpp  PixelsToMetric.h  WorkPiece.cpp  WorkPiece.h  WorkPieceExtractor.cpp  WorkPieceExtractor.h  WorkingArea.cpp  WorkingArea.h  WorkingAreaExtractor.cpp  WorkingAreaExtractor.h  WorkingAreaLoader.cpp  WorkingAreaLoader.h  WorkingAreaSaver.cpp  WorkingAreaSaver.h  wp.h
